--- a/On The Map/Base.lproj/Main.storyboard
+++ b/On The Map/Base.lproj/Main.storyboard
@@ -291,12 +291,12 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="User Name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kr3-ke-BLV">
-                                <rect key="frame" x="56" y="285" width="489" height="30"/>
+                                <rect key="frame" x="56" y="169" width="489" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="emailAddress" keyboardAppearance="alert" returnKeyType="next" enablesReturnKeyAutomatically="YES"/>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bXw-g5-NSd">
-                                <rect key="frame" x="56" y="363" width="489" height="30"/>
+                                <rect key="frame" x="56" y="236" width="489" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="yZv-vm-b0D"/>
                                 </constraints>
@@ -304,7 +304,7 @@
                                 <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardAppearance="alert" returnKeyType="go" enablesReturnKeyAutomatically="YES" secureTextEntry="YES"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ENk-hG-wGn">
-                                <rect key="frame" x="205" y="427" width="190" height="46"/>
+                                <rect key="frame" x="205" y="311" width="190" height="46"/>
                                 <color key="backgroundColor" name="alternateSelectedControlColor" catalog="System" colorSpace="catalog"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="190" id="HcT-XC-bgp"/>
@@ -317,7 +317,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Debug Text" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JBs-W6-Gi3">
-                                <rect key="frame" x="168" y="230" width="265" height="21"/>
+                                <rect key="frame" x="168" y="114" width="265" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="265" id="LNa-wt-E3q"/>
                                 </constraints>
@@ -325,20 +325,39 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PGA-8X-6cj">
+                                <rect key="frame" x="205" y="396" width="190" height="30"/>
+                                <color key="backgroundColor" red="0.0" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal" title="Login with Twitter"/>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="or" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pWV-aV-hd9">
+                                <rect key="frame" x="292" y="367" width="29" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="29" id="9vi-eq-dpl"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" name="selectedControlColor" catalog="System" colorSpace="catalog"/>
                         <constraints>
-                            <constraint firstItem="WVY-1K-8kg" firstAttribute="top" secondItem="ENk-hG-wGn" secondAttribute="bottom" constant="127" id="2d9-gX-gF1"/>
-                            <constraint firstItem="bXw-g5-NSd" firstAttribute="top" secondItem="kr3-ke-BLV" secondAttribute="bottom" constant="48" id="3Dd-oV-3Wq"/>
+                            <constraint firstItem="bXw-g5-NSd" firstAttribute="top" secondItem="kr3-ke-BLV" secondAttribute="bottom" constant="37" id="3Dd-oV-3Wq"/>
                             <constraint firstItem="kr3-ke-BLV" firstAttribute="top" secondItem="JBs-W6-Gi3" secondAttribute="bottom" constant="34" id="47Q-oz-t07"/>
                             <constraint firstItem="bXw-g5-NSd" firstAttribute="trailing" secondItem="kr3-ke-BLV" secondAttribute="trailing" id="A8U-WW-fmh"/>
+                            <constraint firstItem="PGA-8X-6cj" firstAttribute="top" secondItem="pWV-aV-hd9" secondAttribute="bottom" constant="8" symbolic="YES" id="ASN-6N-Asm"/>
+                            <constraint firstItem="pWV-aV-hd9" firstAttribute="leading" secondItem="mtn-ud-juv" secondAttribute="leading" constant="292" id="CZy-8U-FH0"/>
                             <constraint firstItem="ENk-hG-wGn" firstAttribute="centerX" secondItem="bXw-g5-NSd" secondAttribute="centerX" id="QjT-b2-oRu"/>
-                            <constraint firstItem="ENk-hG-wGn" firstAttribute="top" secondItem="bXw-g5-NSd" secondAttribute="bottom" constant="34" id="cMB-ls-47e"/>
+                            <constraint firstAttribute="bottom" secondItem="pWV-aV-hd9" secondAttribute="bottom" constant="212" id="WOg-bA-ohY"/>
+                            <constraint firstItem="PGA-8X-6cj" firstAttribute="top" secondItem="ENk-hG-wGn" secondAttribute="bottom" constant="39" id="Yom-Ar-Rp2"/>
+                            <constraint firstItem="ENk-hG-wGn" firstAttribute="top" secondItem="bXw-g5-NSd" secondAttribute="bottom" constant="45" id="cMB-ls-47e"/>
                             <constraint firstItem="kr3-ke-BLV" firstAttribute="centerX" secondItem="mtn-ud-juv" secondAttribute="centerX" id="eMl-Tc-3CH"/>
                             <constraint firstItem="JBs-W6-Gi3" firstAttribute="centerX" secondItem="kr3-ke-BLV" secondAttribute="centerX" id="nXJ-JI-pn7"/>
+                            <constraint firstItem="PGA-8X-6cj" firstAttribute="trailing" secondItem="ENk-hG-wGn" secondAttribute="trailing" id="pPp-og-2KN"/>
                             <constraint firstItem="bXw-g5-NSd" firstAttribute="leading" secondItem="kr3-ke-BLV" secondAttribute="leading" id="tQf-YS-3k7"/>
                             <constraint firstItem="kr3-ke-BLV" firstAttribute="leading" secondItem="mtn-ud-juv" secondAttribute="leadingMargin" constant="36" id="vOn-eW-FB2"/>
-                            <constraint firstItem="kr3-ke-BLV" firstAttribute="centerY" secondItem="mtn-ud-juv" secondAttribute="centerY" id="yGr-TX-NC8"/>
+                            <constraint firstItem="PGA-8X-6cj" firstAttribute="leading" secondItem="ENk-hG-wGn" secondAttribute="leading" id="wbS-TY-VWp"/>
+                            <constraint firstItem="kr3-ke-BLV" firstAttribute="centerY" secondItem="mtn-ud-juv" secondAttribute="centerY" constant="-116" id="yGr-TX-NC8"/>
                         </constraints>
                     </view>
                     <connections>
